unpackaged/main/default/objects/pse__Search_Resources_Global__c/pse__Search_Resources_Global__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains org-wide settings for Search Resources</description>
    <label>Search Resources Global</label>
</CustomObject>