unpackaged/main/default/objects/pse__Search_Resources_Global__c/fields/pse__Allow_Special_Characters_In_Address__c.field-meta.xml
<CustomField>
    <fullName>pse__Allow_Special_Characters_In_Address__c</fullName>
    <defaultValue>"+,#,&amp;,°,÷"</defaultValue>
    <description>Determines a set of comma separated characters to allow in the address field.</description>
    <inlineHelpText>Determines a set of comma separated characters to allow in the address field.</inlineHelpText>
    <label>Allow Special Characters In Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>