unpackaged/main/default/objects/pse__Search_Resources_Global__c/fields/pse__Contact_Field_3__c.field-meta.xml
<CustomField>
    <fullName>pse__Contact_Field_3__c</fullName>
    <description>API name of a field in the contact object to be displayed in Search Resources. This option is ignored when Display Resource Description is true.</description>
    <inlineHelpText>API name of a field in the contact object to be displayed in Search Resources. This option is ignored when Display Resource Description is true.</inlineHelpText>
    <label>Contact Field 3</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>