unpackaged/main/default/objects/pse__Search_Resources_Global__c/fields/pse__Display_Resource_Description__c.field-meta.xml
<CustomField>
    <fullName>pse__Display_Resource_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, only the resource's description is shown. When false, Contact Fields 1 to 3 are shown if they contain a valid API name of a field in the contact object. The default value is false.</description>
    <inlineHelpText>When true, only the resource's description is shown. When false, Contact Fields 1 to 3 are shown if they contain a valid API name of a field in the contact object. The default value is false.</inlineHelpText>
    <label>Display Resource Description</label>
    <type>Checkbox</type>
</CustomField>