unpackaged/main/default/objects/pse__Search_Resources_Global__c/fields/pse__Geolocation_Service_URL__c.field-meta.xml
<CustomField>
    <fullName>pse__Geolocation_Service_URL__c</fullName>
    <defaultValue>"http://www.mapquestapi.com/geocoding/v1/address?key=Fmjtd%7Cluub2q6820%2Caa%3Do5-961xh0&amp;outFormat=json&amp;maxResults=1"</defaultValue>
    <description>Mapping service URL to use when obtaining latitude and longitude using an address. Default value: http://www.mapquestapi.com/geocoding/v1/address?key=Fmjtd%7Cluub2q6820%2Caa%3Do5-961xh0&amp;outFormat=json&amp;maxResults=1</description>
    <inlineHelpText>Mapping service URL to use when obtaining latitude and longitude using an address. Default value: http://www.mapquestapi.com/geocoding/v1/address?key=Fmjtd%7Cluub2q6820%2Caa%3Do5-961xh0&amp;outFormat=json&amp;maxResults=1</inlineHelpText>
    <label>Geolocation Service URL</label>
    <type>Url</type>
</CustomField>