unpackaged/main/default/objects/pse__Search_Resources_Global__c/fields/pse__Invalid_Longitude_And_Latitude_Pairs__c.field-meta.xml
<CustomField>
    <fullName>pse__Invalid_Longitude_And_Latitude_Pairs__c</fullName>
    <defaultValue>"-100.44588200,39.78373000"</defaultValue>
    <description>Determines that longitude and latitude are not updated when the address is invalid. Supported format: longitude,latitude;longitude,latitude.</description>
    <inlineHelpText>Determines that longitude and latitude are not updated when the address is invalid. Supported format: longitude,latitude;longitude,latitude.</inlineHelpText>
    <label>Invalid Longitude and Latitude</label>
    <length>100</length>
    <type>Text</type>
</CustomField>